# SDK

./: README.md  pyproject.toml  test_contracts.py  test_storage.py
helm/worker-chart/: Chart.yaml  values.yaml
helm/worker-chart/templates/: configmap.yaml  deployment.yaml  probes.yaml  role.yaml  rolebinding.yaml  scaledobject.yaml  secret-env.yaml  serviceaccount.yaml
observability/: alerts.yaml  dashboards.json
python/: README.md  test_contracts.py  test_sqs.py  test_storage.py
python/service/: hooks.py
python/worker_sdk/: __init__.py  config.py  config.yaml  constants.py  contracts.py  hooks.py  io_db.py  io_s3.py  io_sqs.py  io_storage.py  message.py  runner.py  util_idempotency.py  util_logging.py  util_timeouts.py
python/worker_sdk/config/: default.yaml  vastra.yaml
tests/: contract-checklist.md  load-recipe.md
worker_sdk/: __init__.py  constants.py  hooks.py  idempotency.py  io_db.py  io_gemini.py  io_s3.py  io_sqs.py  logging.py  message.py  pipeline_s3_paths.py  runner.py  work_queue_message.py
worker_sdk/config/: clientLibraryConfig-vastra-aws-provider.json  vastra.yaml
