[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker_sdk", "service"]

[project]
name = "worker-sdk"
version = "0.1.0"
description = "SQS-driven worker SDK for parallel ML pipelines"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "PyYAML>=6.0",
    "psycopg[binary]",
    "psycopg_pool>=3.2.0",
]

